feat: Add sidebar and navbar components

--- a/SambaWebFront/src/app/modules/login/login.component.html
+++ b/SambaWebFront/src/app/modules/login/login.component.html
@@ -7,11 +7,9 @@
 
     <label>
       Password:
-      <input formControlName="password" type="text" />
+      <input formControlName="password" type="password" />
     </label>
 
     <button type="submit">Login</button>
   </form>
-  <img src="../../../assets/icons/gear-solid.svg" alt="Configurar Servidor" class="config-icon"
-    (click)="navigateToServerConfig()" />
 </div>
