feat: Add user page

--- a/SambaWebFront/src/app/@shared/components/navbar/navbar.component.html
+++ b/SambaWebFront/src/app/@shared/components/navbar/navbar.component.html
@@ -1,14 +1,20 @@
 <nav>
   <ul class="nav-list">
-    <li class="nav-item">SAMBA</li>
+    <li class="nav-item logo">SAMBA WEB</li>
     <li class="nav-item submenu">
       <a routerLink="#" class="nav-link">Help</a>
       <ul class="submenu-list">
-        <li class="submenu-item"><a routerLink="#" class="submenu-link">Ajuda</a></li>
-        <li class="submenu-item"><a routerLink="#" class="submenu-link">Suporte</a></li>
-        <li class="submenu-item"><a routerLink="#" class="submenu-link">FAQ</a></li>
+        <li class="submenu-item">
+          <a routerLink="#" class="submenu-link">Ajuda</a>
+        </li>
+        <li class="submenu-item">
+          <a routerLink="#" class="submenu-link">Suporte</a>
+        </li>
+        <li class="submenu-item">
+          <a routerLink="#" class="submenu-link">FAQ</a>
+        </li>
       </ul>
     </li>
-    <li class="nav-item"><a routerLink="#" class="nav-link">User</a></li>
+    <li class="nav-item"><a routerLink="#" class="nav-link">Profile</a></li>
   </ul>
 </nav>
