--- a/SambaWebFront/src/app/@shared/components/sidebar/sidebar.component.html
+++ b/SambaWebFront/src/app/@shared/components/sidebar/sidebar.component.html
@@ -1,7 +1,8 @@
 <div class="sidebar">
   <ul>
-    <li><a routerLink="/home">Home</a></li>
-    <li><a routerLink="/about">Sobre</a></li>
-    <li><a routerLink="/contact">Contato</a></li>
+    <li><a (click)="navigateToUserPage()" routerLink="#">User</a></li>
+    <li><a routerLink="#">Group</a></li>
+    <li><a routerLink="#">Folder</a></li>
+    <li><a routerLink="#">Samba Config</a></li>
   </ul>
 </div>
