feat: Add shared component for datatable

--- a/SambaWebFront/src/app/@shared/components/navbar/navbar.component.html
+++ b/SambaWebFront/src/app/@shared/components/navbar/navbar.component.html
@@ -1,6 +1,8 @@
 <nav>
   <ul class="nav-list">
-    <li class="nav-item logo">SAMBA WEB</li>
+    <li class="nav-item logo">
+      <a (click)="navigateToDashboard()">SAMBA WEB</a>
+    </li>
     <li class="nav-item submenu">
       <a routerLink="#" class="nav-link">Help</a>
       <ul class="submenu-list">
