--- a/SambaWebFront/src/app/modules/dashboard/dashboard.component.html
+++ b/SambaWebFront/src/app/modules/dashboard/dashboard.component.html
@@ -1,5 +1,6 @@
 <div>
   <app-navbar></app-navbar>
   <app-sidebar></app-sidebar>
-  <router-outlet></router-outlet>
+  <app-card [width]="'40vw'" [height]="'50vh'">
+  </app-card>
 </div>
