--- a/SambaWebFront/src/app/modules/user/user.component.html
+++ b/SambaWebFront/src/app/modules/user/user.component.html
@@ -1,7 +1,5 @@
 <div>
   <app-navbar></app-navbar>
   <app-sidebar></app-sidebar>
-  <app-card [width]="'40vw'" [height]="'50vh'">
-    <h1>teste</h1>
-  </app-card>
+  <app-datatable [columnNames]="['Nome', 'Idade', 'Cidade']" [data]="[{ nome: 'João', idade: 25, cidade: 'São Paulo' }, { nome: 'Maria', idade: 30, cidade: 'Rio de Janeiro' }]"></app-datatable>
 </div>
